samples/_failures_safe/1761085942_2a6b83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_860e003c.c: In function ‘main’:
./samples/SAFE/__tmp_860e003c.c:143:25: error: missing terminating " character
  143 |         fprintf(stderr, "User input decompression failed\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_860e003c.c:143:9: error: expected expression at end of input
  143 |         fprintf(stderr, "User input decompression failed\n
      |         ^~~~~~~
./samples/SAFE/__tmp_860e003c.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_860e003c.c:143:9: error: expected declaration or statement at end of input
